# boardroom

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  FreeHandDrawingItem.cpp  FreeHandDrawingItem.hpp  InfiniteScrollGraphicsViewBase.cpp  InfiniteScrollGraphicsViewBase.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  SceneMinimap.cpp  SceneMinimap.hpp  WhiteboardScene.cpp  WhiteboardScene.hpp  WhiteboardToolsModel.cpp  WhiteboardToolsModel.hpp  WhiteboardView.cpp  WhiteboardView.hpp  main.cpp
src/Commands/: CMakeLists.txt  DrawCommand.cpp  DrawCommand.hpp
src/Items/: CMakeLists.txt  EllipseItem.cpp  EllipseItem.hpp  FreeDrawingItem.cpp  FreeDrawingItem.hpp  LineItem.cpp  LineItem.hpp  RectangleItem.cpp  RectangleItem.hpp  TriangleItem.cpp  TriangleItem.hpp
src/Items/Core/: CMakeLists.txt  DrawingItemBase.cpp  DrawingItemBase.hpp  IToolItem.hpp  ToolItemBase.cpp  ToolItemBase.hpp
src/Items/Shapes/: CMakeLists.txt  EllipseItem.cpp  EllipseItem.hpp  LineItem.cpp  LineItem.hpp  RectangleItem.cpp  RectangleItem.hpp  TriangleItem.cpp  TriangleItem.hpp
src/Tools/: CMakeLists.txt  PenTool.cpp  PenTool.hpp  ShapeTool.cpp  ShapeTool.hpp
src/Tools/Core/: CMakeLists.txt  ITool.hpp  ToolBase.cpp  ToolBase.hpp
src/Utility/: CMakeLists.txt  IdHolder.hpp  Registry.hpp  SelectedConstruction.hpp  SingleCall.hpp
src/Widgets/: CMakeLists.txt  InfiniteScrollGraphicsViewBase.cpp  InfiniteScrollGraphicsViewBase.hpp  SceneMinimap.cpp  SceneMinimap.hpp  SceneViewBase.cpp  SceneViewBase.hpp  WhiteboardView.cpp  WhiteboardView.hpp
